# mining_pm

./: .gitignore  AGENTS.md  license.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: codex-task.md
.github/workflows/: deploy.yml  l1-auto-merge.yml  pr-check.yml
apps/mining_pm/: README.md
docs/: T001-engineering-project-issue.md  USAGE.md  deployment.md
docs/frappe-patterns/: 01-doctype-basics.md
mining_pm/: hooks.py  module_def_mining_pm.txt  patches.txt
mining_pm/doctype/engineering_approval_log/: engineering_approval_log.json  engineering_approval_log.py  test_engineering_approval_log.py
mining_pm/doctype/engineering_equipment/: engineering_equipment.py
mining_pm/doctype/engineering_project/: engineering_project.py
mining_pm/fixtures/: workflow.json  workflow_action_master.json  workflow_state.json
mining_pm/mining_pm/doctype/company/: company.json  company.py  test_company.py
mining_pm/mining_pm/doctype/department/: department.json  department.py  test_department.py
mining_pm/mining_pm/doctype/engineering_equipment/: engineering_equipment.json  test_engineering_equipment.py
mining_pm/mining_pm/doctype/engineering_item/: engineering_item.json  engineering_item.py  test_engineering_item.py
mining_pm/mining_pm/doctype/engineering_material/: engineering_material.json  engineering_material.py  (+1 more)
mining_pm/mining_pm/fixtures/: workflow.json
mining_pm/patches/v0_0_2/: sync_fixtures.py
scripts/: check-l1-whitelist.sh  deploy-mining-pm.sh  install-rollback-state.sh  pre-pr-check.sh  validate-doctype.py
(+3 files in other folders)
